@@ -1,5 +1,8 @@
 2019-06-12  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* sysdeps/ieee754/dbl-64/wordsize-64/s_isinf.c: Move to ...
+	* sysdeps/ieee754/dbl-64/s_isinf.c: ... here and format code.
+
 	* sysdeps/powerpc/fpu/s_isnan.c: Remove file.
 	* sysdeps/powerpc/fpu/s_isnanf.S: Likewise.
 	* sysdeps/powerpc/powerpc32/fpu/s_isnan.S: Likewise.
